2017-07-18  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Don't check for linux/bpf.h.
	* NEWS: Mention always build bpf backend.

2017-07-14  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add 0.170 section and new strip options.

2017-05-05  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.169. Update copyright year.
	* NEWS: Add 0.169 section.

2017-04-21  Ulf Hermann  <ulf.hermann@qt.io>

	* .gitignore: Add fillfile and peel_type tests.

2017-02-15  Ulf Hermann  <ulf.hermann@qt.io>

	* configure.ac: Add check for mempcpy.

2017-02-09  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Add check for adding -D_FORTIFY_SOURCE=2 to CFLAGS.

2017-01-12  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Define PACKAGE_URL for older autoconf.

2016-12-27  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.168.
	* NEWS: Add 0.168 updates.

2016-12-24  Mark Wielaard  <mark@klomp.org>

	* README: Move design notes to NOTES. Add URLs for home, releases,
	bugs, git and mailinglist now on sourceware.
	* NOTES: Add notes from README.
	* CONTRIBUTING: Change fedorahosted.org references to new
	sourceware.org locations.
	* configure.ac (AC_INIT): Add package URL http://elfutils.org/
	change bug-report to https://sourceware.org/bugzilla/
	(AC_COPYRIGHT): Set to the elfutils developers.

2016-11-23  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add test for bad fts.h. Add -DBAD_FTS=1 to CFLAGS
	if necessary.

2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add check for whether gcc accepts
	-Wimplict-fallthrough.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* configure.ac: Add memrchr, rawmemchr and powerof2 checks.

2016-08-04  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.167.
	* NEWS: Add 0.167 section.

2016-07-06  Mark Wielaard  <mjw@redhat.com>

	* .gitignore: Remove src/ld. ldlex.c, ldscript.c and ldscript.h.
	* configure.ac (enable generic): Removed.
