@@ -1,3 +1,7 @@
+2017-07-25  Mark Wielaard  <mark@klomp.org>
+
+	* NEWS: Mention new DWARF5 attributes in dwarf.h.
+
 2017-07-18  Mark Wielaard  <mark@klomp.org>
 
 	* configure.ac: Don't check for linux/bpf.h.
